--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 #DataBase Settings
-db.datasource.jdbcurl=jdbc:mysql://150.230.88.104:3306/trabalhoA3?allowPublicKeyRetrieval=true&useSSL=false
-db.datasource.username=root
-db.datasource.password=14870
+db.datasource.jdbcurl=jdbc:mysql://cleberleao:3306/cleberleao_oficina?allowPublicKeyRetrieval=true&useSSL=false
+db.datasource.username=cleberleao_oficina
+db.datasource.password=mysql2024@
 
 #token jwt
 jwt.secret=z7y?4mGk4BCRRB&L7XXgwv#NavYP4N!2s!^N?9#$U$K8-JRB!fjDJpfjP*QPDmvQAjMdYn35cv3Y7-hb-NN2=*py?sp*qRT6f
